--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
@@ -127,13 +132,6 @@
           </archive>
         </configuration>
       </plugin>
-      <!--   
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.9</version>
-      </plugin>
-      -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -295,19 +293,7 @@
   </build>
 
   <repositories>
-    <!--repository>
-      <id>pds-repo</id>
-      <name>PDS Maven Repository</name>
-      <url>https://pds-cm.jpl.nasa.gov/maven2</url>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-        <checksumPolicy>warn</checksumPolicy>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository-->
+    <!-- JBoss Repo Needed for JAI libraries -->
     <repository>
       <id>JBoss</id>
       <name>Maven JBoss Nexus</name>
@@ -317,26 +303,6 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-    <!--repository>
-      <id>maven2</id>
-      <name>Maven central</name>
-      <layout>default</layout>
-      <url>http://repo1.maven.org/maven2/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository-->
-    <!--repository>
-      <id>lib</id>
-      <releases>
-	<enabled>true</enabled>
-	<checksumPolicy>ignore</checksumPolicy>
-      </releases>
-      <snapshots>
-	<enabled>false</enabled>
-      </snapshots>
-      <url>file://${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</url>
-    </repository-->
     <repository>
       <id>geotools</id>
       <name>OSGeo Download Server</name>
@@ -346,15 +312,6 @@
 	<enabled>false</enabled>
       </snapshots>
     </repository>
-    <!--repository>
-      <id>geo-solutions</id>
-      <name>Geo Solutions Repository</name>
-      <layout>default</layout>
-      <url>https://maven.geo-solutions.it/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository-->
   </repositories>
 
   <dependencies>
@@ -416,7 +373,7 @@
     </dependency>
     <dependency>
       <groupId>javax.media</groupId>
-      <artifactId>jai_core</artifactId>
+      <artifactId>jai-core</artifactId>
       <version>1.1.3</version>
     </dependency>
     <dependency>
@@ -426,7 +383,7 @@
       <exclusions>
         <exclusion>
           <groupId>javax.media</groupId>
-          <artifactId>jai_core</artifactId>
+          <artifactId>jai-core</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -475,12 +432,6 @@
       <version>2.11.0</version>
       <scope>compile</scope>
     </dependency>
-    <!--dependency>
-      <groupId>org.apache.xerces</groupId>
-      <artifactId>cupv10k-runtime</artifactId>
-      <version>2.11.0-xml-schema-1.1-beta</version>
-      <scope>compile</scope>
-    </dependency-->
     <dependency>
       <groupId>org.easytesting</groupId>
       <artifactId>fest-reflect</artifactId>
@@ -498,31 +449,7 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
       <version>1.0</version>
-      <scope>test</scope>
-    </dependency>	
-    <!--dependency>
-      <groupId>it.geosolutions.jaiext.stats</groupId>
-      <artifactId>jt-stats</artifactId>
-      <version>1.1.8</version>
-      <exclusions>
-        <exclusion>
-          <groupId>javax.media</groupId>
-          <artifactId>jai_core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.media</groupId>
-          <artifactId>jai-codec</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.media</groupId>
-          <artifactId>jai_imageio</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>xerces</groupId>
-          <artifactId>xercesImpl</artifactId>
-        </exclusion>                         
-      </exclusions>            
-    </dependency-->
+    </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -533,16 +460,24 @@
       <artifactId>jaxb-impl</artifactId>
       <version>2.2.4</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
       <version>1.16</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
   <!-- This profile allows this project to be built under 1.8 -->
-  <!-- Update 5/24/2018 - Disabling as this is specified in the parent 2010 POM
-  <profiles>
+  <!--profiles>
     <profile>
       <id>doclint-java8-disable</id>
       <activation>
@@ -554,6 +489,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <configuration>
+              <failOnError>false</failOnError>
               <additionalparam>-Xdoclint:none</additionalparam>
             </configuration>
           </plugin>
@@ -576,16 +512,49 @@
         </plugins>
       </build>
     </profile>
-  </profiles>  
-  -->
+  </profiles-->
   
   <!-- Project Information and Reports inherited from parent. -->
   <reporting>
-    <!-- Project Reports not inherited from parent. -->
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <reportSets>
+	  <reportSet>
+            <reports>
+              <report>dependencies</report>
+              <report>issue-management</report>
+              <report>licenses</report>
+              <report>mailing-lists</report>
+              <report>team</report>
+              <report>summary</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-changes-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>changes-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <failOnError>false</failOnError>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
       </plugin>
     </plugins>
   </reporting>
