--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 
   <groupId>gov.nasa.pds.preparation</groupId>
   <artifactId>pds4-parser</artifactId>
-  <version>0.12.0</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>PDS4 Parser</name>
@@ -349,13 +349,6 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>gov.nasa.jpl.ammos.ids.vicario</groupId>
-      <artifactId>vicario</artifactId>
-      <version>48.0.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-    <dependency>
       <groupId>xalan</groupId>
       <artifactId>xalan</artifactId>
       <version>2.7.1</version>
@@ -407,18 +400,6 @@
       <artifactId>stringtemplate</artifactId>
       <version>3.2</version>
     </dependency>
-    <dependency>
-      <groupId>gov.nasa.pds</groupId>
-      <artifactId>product-tools</artifactId>
-      <version>3.6.0</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/lib/product-tools-3.6.0.jar</systemPath>
-    </dependency>
-    <!--dependency>
-      <groupId>gov.nasa.arc</groupId>
-      <artifactId>pds-utils</artifactId>
-      <version>1.0.1</version>
-    </dependency-->
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
@@ -475,46 +456,23 @@
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
     </dependency>
+    <!-- Temporary local lib jars until available on Maven central -->
+    <dependency>
+      <groupId>gov.nasa.jpl.ammos.ids.vicario</groupId>
+      <artifactId>vicario</artifactId>
+      <version>48.0.3-SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>gov.nasa.pds</groupId>
+      <artifactId>product-tools</artifactId>
+      <version>3.6.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/lib/product-tools-3.6.0.jar</systemPath>
+    </dependency>
   </dependencies>
-  <!-- This profile allows this project to be built under 1.8 -->
-  <!--profiles>
-    <profile>
-      <id>doclint-java8-disable</id>
-      <activation>
-        <jdk>[1.8,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <failOnError>false</failOnError>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>3.3</version>
-            <configuration>
-              <reportPlugins>
-                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-javadoc-plugin</artifactId>
-                  <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                  </configuration>
-                </plugin>
-              </reportPlugins>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles-->
-  
-  <!-- Project Information and Reports inherited from parent. -->
+
   <reporting>
     <plugins>
       <plugin>
