--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,16 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>gov.nasa.pds.preparation</groupId>
-  <artifactId>pds4-parser</artifactId>
+  <groupId>gov.nasa.pds</groupId>
+  <artifactId>pds4-jparser</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
-  <name>PDS4 Parser</name>
+  <name>PDS4 JParser</name>
   <description>
     This is the parser library for the PDS4 planetary data standard.
   </description>
-  <url>https://pds-engineering.jpl.nasa.gov/development/pds4/current/preparation/pds4-parser/index.html</url>
+  <url>https://pds-engineering.jpl.nasa.gov/development/pds4/current/preparation/pds4-jparser/index.html</url>
 
   <licenses>
     <license>
@@ -456,6 +456,12 @@
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
     </dependency>
+    <dependency>
+      <groupId>gov.nasa.pds</groupId>
+      <artifactId>pds3-product-tools</artifactId>
+      <version>4.0.0</version>
+      <scope>test</scope>
+    </dependency>
     <!-- Temporary local lib jars until available on Maven central -->
     <dependency>
       <groupId>gov.nasa.jpl.ammos.ids.vicario</groupId>
@@ -463,13 +469,6 @@
       <version>48.0.3-SNAPSHOT</version>
       <scope>system</scope>
       <systemPath>${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-    <dependency>
-      <groupId>gov.nasa.pds</groupId>
-      <artifactId>product-tools</artifactId>
-      <version>3.6.0</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/lib/product-tools-3.6.0.jar</systemPath>
     </dependency>
   </dependencies>
 
