--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,28 @@
     </resources>  
     <plugins>
       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-install-plugin</artifactId>
+         <version>2.5.1</version>
+         <configuration>
+            <groupId>gov.nasa.jpl.ammos.ids.vicario</groupId>
+            <artifactId>vicario</artifactId>
+            <version>48.0.3-SNAPSHOT</version>
+            <packaging>jar</packaging>
+            <file>${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</file>
+            <generatePom>true</generatePom>
+         </configuration>
+         <executions>
+            <execution>
+               <id>install-jar-lib</id>
+               <goals>
+                  <goal>install-file</goal>
+               </goals>
+               <phase>validate</phase>
+            </execution>
+         </executions>
+      </plugin>
+      <plugin>
 	    <groupId>org.sonatype.plugins</groupId>
 	    <artifactId>nexus-staging-maven-plugin</artifactId>
 	    <version>1.6.7</version>
@@ -183,7 +205,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.7</version>
         <executions>
           <execution>
             <id>generate-sources</id>
@@ -566,16 +587,14 @@
     <dependency>
       <groupId>gov.nasa.pds</groupId>
       <artifactId>pds3-product-tools</artifactId>
-      <version>4.0.1</version>
+      <version>${pds3-product-tools.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- Temporary local lib jars until available on Maven central -->
     <dependency>
       <groupId>gov.nasa.jpl.ammos.ids.vicario</groupId>
       <artifactId>vicario</artifactId>
       <version>48.0.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/lib/vicario-48.0.3-SNAPSHOT.jar</systemPath>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -624,6 +643,7 @@
   </reporting>
   <properties>
     <model-version>1C00</model-version>
+    <pds3-product-tools.version>4.0.1</pds3-product-tools.version>
     <checkstyle.version>2.10</checkstyle.version>
     <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
     <maven.antrun.version>1.7</maven.antrun.version>
