--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
   <groupId>gov.nasa.pds</groupId>
   <artifactId>pds4-jparser</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -135,7 +135,7 @@
       </resource>
     </resources>  
     <plugins>
-      <plugin>
+      <!--plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.1</version>
@@ -156,7 +156,7 @@
                <phase>validate</phase>
             </execution>
          </executions>
-      </plugin>
+      </plugin-->
       <plugin>
 	    <groupId>org.sonatype.plugins</groupId>
 	    <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -355,9 +355,9 @@
   </distributionManagement>
   
   <scm>
-    <url>https://github.com/NASA-PDS-Incubator/pds3-product-tools/tree/master</url>
-    <connection>scm:git:git://github.com/NASA-PDS-Incubator/pds3-product-tools.git</connection>
-    <developerConnection>scm:git:ssh://github.com:NASA-PDS-Incubator/pds3-product-tools.git</developerConnection>
+    <url>https://github.com/NASA-PDS-Incubator/pds4-jparser/tree/master</url>
+    <connection>scm:git:git://github.com/NASA-PDS-Incubator/pds4-jparser.git</connection>
+    <developerConnection>scm:git:ssh://github.com:NASA-PDS-Incubator/pds4-jparser.git</developerConnection>
   </scm>
 
   <profiles>
@@ -421,6 +421,11 @@
   </profiles>
 
   <repositories>
+    <repository>
+      <id>project.local</id>
+      <name>project</name>
+      <url>file:${project.basedir}/repo</url>
+    </repository>
     <!-- JBoss Repo Needed for JAI libraries -->
     <repository>
       <id>JBoss</id>
