Ingest IM 1D00 release candidate (resolves #11)

--- a/pom.xml
+++ b/pom.xml
@@ -657,7 +657,7 @@
     </plugins>
   </reporting>
   <properties>
-    <model-version>1C00</model-version>
+    <model-version>1D00</model-version>
     <pds3-product-tools.version>4.0.1</pds3-product-tools.version>
     <checkstyle.version>2.10</checkstyle.version>
     <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
