--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
   <groupId>gov.nasa.pds</groupId>
   <artifactId>pds4-jparser</artifactId>
-  <version>1.2.0</version>
+  <version>1.3.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
