--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
       </roles>
     </developer>
     <developer>
+      <name>Hyun Lee</name>
+      <id>hyunlee</id>
+      <email>Hyun.Lee@jpl.nasa.gov</email>
+      <organization>NASA Jet Propulsion Laboratory</organization>
+      <roles>
+        <role>Developer</role>
+      </roles>
+    </developer>
+    <developer>
       <name>Sean Hardman</name>
       <id>shardman</id>
       <email>Sean.Hardman@jpl.nasa.gov</email>
