--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,8 +4,9 @@
 name: Maven Build
 
 on:
-   schedule:
-      - cron: '0 8 * * *'
+  push:
+    branches:
+    - master
 
 jobs:
   build:
@@ -18,8 +19,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
 
     - name: Set up Python 3
       uses: actions/setup-python@v1
@@ -29,8 +31,11 @@ jobs:
     - name: Install dependencies
       run: python -m pip install --upgrade pip setuptools wheel
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Publish package
+      run: mvn -B deploy --file pom.xml
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
       
     - name: Adding dependencies
       run: |
