--- a/.github/workflows/snapshot-maven.yml
+++ b/.github/workflows/snapshot-maven.yml
@@ -43,9 +43,9 @@ jobs:
       
     - name: Adding dependencies
       run: |
-         sudo apt-get install -y libxml2-dev libxslt1-dev python-libxml2
+         sudo apt-get update && sudo apt-get install -y libxml2-dev libxslt1-dev python-libxml2
 
     - name: Publish new snapshot release
       run: |
          pip install pds-github-util
-         snapshot-release --token ${{ secrets.GITHUB_TOKEN }}
+         maven-snapshot-release --token ${{ secrets.GITHUB_TOKEN }}
