--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   <description>
     This is the parser library for the PDS4 planetary data standard.
   </description>
-  <url>https://nasa-pds-incubator.github.io/pds4-jparser/</url>
+  <url>https://NASA-PDS.github.io/pds4-jparser/</url>
 
   <licenses>
     <license>
@@ -245,9 +245,9 @@
   </build>
   
   <scm>
-    <url>https://github.com/NASA-PDS-Incubator/pds4-jparser/tree/master</url>
-    <connection>scm:git:git://github.com/NASA-PDS-Incubator/pds4-jparser.git</connection>
-    <developerConnection>scm:git:ssh://github.com:NASA-PDS-Incubator/pds4-jparser.git</developerConnection>
+    <url>https://github.com/NASA-PDS/pds4-jparser/tree/master</url>
+    <connection>scm:git:git://github.com/NASA-PDS/pds4-jparser.git</connection>
+    <developerConnection>scm:git:ssh://github.com:NASA-PDS/pds4-jparser.git</developerConnection>
   </scm>
 
   <repositories>
