--- a/.github/workflows/snapshot-maven.yml
+++ b/.github/workflows/snapshot-maven.yml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 11
         server-id: ossrh
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
@@ -49,3 +49,25 @@ jobs:
       run: |
          pip install pds-github-util
          maven-snapshot-release --token ${{ secrets.GITHUB_TOKEN }}
+       # the changelog will be available on https://nasa-pds.github.io/<your repo>/CHANGELOG
+    - uses: actions/checkout@v2
+      with:
+        ref: gh-pages
+    - name: Create changelog and requirements
+      run: |
+        echo ::set-env name=REQUIREMENT_FILE::$(requirement-report --organization NASA-PDS --repository pds4-jparser  --output pdsen-corral --token ${{ secrets.GITHUB_TOKEN }} --dev)
+        sudo gem install github_changelog_generator
+        github_changelog_generator --user NASA-PDS --project pds4-jparser --output pdsen-corral/CHANGELOG.md --token ${{ secrets.GITHUB_TOKEN }} --configure-sections '{"improvements":{"prefix":"**Improvements:**","labels":["enhancement"]},"defects":{"prefix":"**Defects:**","labels":["bug"]},"deprecations":{"prefix":"**Deprecations:**","labels":["deprecation"]}}' --no-pull-requests
+    - name: Commit CHANGELOG.md and requirement files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add pdsen-corral/CHANGELOG.md ${{ env.REQUIREMENT_FILE }}
+        git commit -m "update changelog and requirements" --allow-empty
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: gh-pages
+    - name: Ping pdsen-corral
+      run: git-ping --repo nasa-pds/pdsen-corral --token ${{ secrets.ADMIN_GITHUB_TOKEN }} --branch master --message 'pds4-jparser has been updated'
