--- a/.github/workflows/snapshot-maven.yml
+++ b/.github/workflows/snapshot-maven.yml
@@ -45,29 +45,29 @@ jobs:
     # - uses: actions/checkout@v2
     #   with:
     #     ref: gh-pages
-    - name: Create requirements report
-      run: echo ::set-env name=REQUIREMENT_FILE::$(requirement-report --organization NASA-PDS --repository pds4-jparser --token ${{ secrets.GITHUB_TOKEN }} --output docs/requirements --dev)
+    # - name: Create requirements report
+    #   run: echo ::set-env name=REQUIREMENT_FILE::$(requirement-report --organization NASA-PDS --repository pds4-jparser --token ${{ secrets.GITHUB_TOKEN }} --output docs/requirements --dev)
 
-    - name: create changelog
-      run: |
-        #sudo gem install github_changelog_generator
-        # deploy from source, does no work yet, nice to have for a feature to have issues' labels in changelog
-        git clone https://github.com/github-changelog-generator/github-changelog-generator.git
-        #gem sources --add https://rubygems.org/
-        cd github-changelog-generator
-        git checkout 322e30a78115ab948e358cd916a9f78e55fe21c1
-        gem build github_changelog_generator.gemspec
-        sudo gem install github_changelog_generator-1.15.2.gem  --source http://rubygems.org
-        cd ..
-        github_changelog_generator --user NASA-PDS --project pds4-jparser  --output CHANGELOG.md --token ${{ secrets.ADMIN_GITHUB_TOKEN }} --configure-sections '{"improvements":{"prefix":"**Improvements:**","labels":["Epic"]},"defects":{"prefix":"**Defects:**","labels":["bug"]},"deprecations":{"prefix":"**Deprecations:**","labels":["deprecation"]}}' --no-pull-requests  --issues-label '**Other closed issues:**' --issue-line-labels high,low,medium
-    - name: Commit CHANGELOG.md and requirement files
-      run: |
-        git config --local user.email "pdsen-ci@jpl.nasa.gov"
-        git config --local user.name "PDSEN CI Bot"
-        git pull origin master
-        echo "update CHANGELOG.md and ${{ env.REQUIREMENT_FILE }} on master branch"
-        git add CHANGELOG.md ${{ env.REQUIREMENT_FILE }}
-        git commit -m "update changelog and requirements" --allow-empty
+    # - name: create changelog
+    #   run: |
+    #     #sudo gem install github_changelog_generator
+    #     # deploy from source, does no work yet, nice to have for a feature to have issues' labels in changelog
+    #     git clone https://github.com/github-changelog-generator/github-changelog-generator.git
+    #     #gem sources --add https://rubygems.org/
+    #     cd github-changelog-generator
+    #     git checkout 322e30a78115ab948e358cd916a9f78e55fe21c1
+    #     gem build github_changelog_generator.gemspec
+    #     sudo gem install github_changelog_generator-1.15.2.gem  --source http://rubygems.org
+    #     cd ..
+    #     github_changelog_generator --user NASA-PDS --project pds4-jparser  --output CHANGELOG.md --token ${{ secrets.ADMIN_GITHUB_TOKEN }} --configure-sections '{"improvements":{"prefix":"**Improvements:**","labels":["Epic"]},"defects":{"prefix":"**Defects:**","labels":["bug"]},"deprecations":{"prefix":"**Deprecations:**","labels":["deprecation"]}}' --no-pull-requests  --issues-label '**Other closed issues:**' --issue-line-labels high,low,medium
+    # - name: Commit CHANGELOG.md and requirement files
+    #   run: |
+    #     git config --local user.email "pdsen-ci@jpl.nasa.gov"
+    #     git config --local user.name "PDSEN CI Bot"
+    #     git pull origin master
+    #     echo "update CHANGELOG.md and ${{ env.REQUIREMENT_FILE }} on master branch"
+    #     git add CHANGELOG.md ${{ env.REQUIREMENT_FILE }}
+    #     git commit -m "update changelog and requirements" --allow-empty
 
     - name: Publish package
       run: mvn -B deploy --file pom.xml
