--- a/pom.xml
+++ b/pom.xml
@@ -299,9 +299,9 @@
       <version>1.7.21</version>
     </dependency>    
     <dependency>
-      <groupId>net.sf.opencsv</groupId>
+      <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>2.3</version>
+      <version>5.4-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
