--- a/.github/workflows/unstable-cicd.yaml
+++ b/.github/workflows/unstable-cicd.yaml
@@ -56,6 +56,7 @@ jobs:
                 uses: NASA-PDS/roundup-action@master
                 with:
                     assembly: unstable
+                    packages: openjdk11
                 env:
                     ossrh_username: ${{secrets.OSSRH_USERNAME}}
                     ossrh_password: ${{secrets.OSSRH_PASSWORD}}
