--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
   <groupId>gov.nasa.pds</groupId>
   <artifactId>pds4-jparser</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.0.1</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
