--- a/.github/workflows/unstable-cicd.yaml
+++ b/.github/workflows/unstable-cicd.yaml
@@ -52,7 +52,7 @@ jobs:
                 with:
                     lfs: true
                     token: ${{secrets.ADMIN_GITHUB_TOKEN}}
-                    packages: openjdk8-jdk
+                    packages: openjdk8-jre
 
             -
                 name: 🤠 Roundup
