trying with openjdk8 package instead
openjdk8-jre didn't seem to work. this should break the build because currently pds4-jparser tests fail when executed under java8

--- a/.github/workflows/unstable-cicd.yaml
+++ b/.github/workflows/unstable-cicd.yaml
@@ -58,7 +58,7 @@ jobs:
                 uses: NASA-PDS/roundup-action@master
                 with:
                     assembly: unstable
-                    packages: openjdk8-jre
+                    packages: openjdk8
                 env:
                     ossrh_username: ${{secrets.OSSRH_USERNAME}}
                     ossrh_password: ${{secrets.OSSRH_PASSWORD}}
