--- a/.github/workflows/stable-cicd.yaml
+++ b/.github/workflows/stable-cicd.yaml
@@ -71,6 +71,7 @@ jobs:
                 uses: NASA-PDS/roundup-action@main
                 with:
                     assembly: stable
+                    packages: openjdk8
                 env:
                     ossrh_username: ${{secrets.OSSRH_USERNAME}}
                     ossrh_password: ${{secrets.OSSRH_PASSWORD}}
