Package with openjdk8 by default

--- a/.github/workflows/unstable-cicd.yaml
+++ b/.github/workflows/unstable-cicd.yaml
@@ -70,6 +70,7 @@ jobs:
                 uses: NASA-PDS/roundup-action@main
                 with:
                     assembly: unstable
+                    packages: openjdk8
                 env:
                     ossrh_username: ${{secrets.OSSRH_USERNAME}}
                     ossrh_password: ${{secrets.OSSRH_PASSWORD}}
