--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,26 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M3</version>
       </plugin>
+      <build>
+  <plugins>
+    <plugin>
+      <groupId>com.github.github</groupId>
+      <artifactId>site-maven-plugin</artifactId>
+      <version>0.12</version>
+      <configuration>
+        <message>Creating site for ${project.version}</message>
+      </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>site</goal>
+          </goals>
+          <phase>site</phase>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
     </plugins>
     <pluginManagement>
       <plugins>
