--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@ POSSIBILITY OF SUCH DAMAGE.
   <parent>
     <groupId>gov.nasa</groupId>
     <artifactId>pds</artifactId>
-    <version>1.12.0</version>
+    <version>1.13.0</version>
   </parent>
 
   <groupId>gov.nasa.pds</groupId>
@@ -261,7 +261,7 @@ POSSIBILITY OF SUCH DAMAGE.
   <scm>
     <url>https://github.com/NASA-PDS/pds4-jparser/tree/master</url>
     <connection>scm:git:git://github.com/NASA-PDS/pds4-jparser.git</connection>
-    <developerConnection>scm:git:ssh://github.com:NASA-PDS/pds4-jparser.git</developerConnection>
+    <developerConnection>scm:git:ssh://git@github.com:NASA-PDS/pds4-jparser.git</developerConnection>
   </scm>
 
   <repositories>
