--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Inherit release profile, reporting, SNAPSHOT repo, etc. from parent repo -->
@@ -44,7 +46,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
   <groupId>gov.nasa.pds</groupId>
   <artifactId>pds4-jparser</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -113,10 +115,10 @@ POSSIBILITY OF SUCH DAMAGE.
             <phase>generate-sources</phase>
             <configuration>
               <target>
-                <property name="compile.classpath" refid="maven.compile.classpath" />
-                <property name="runtime.classpath" refid="maven.runtime.classpath" />
-                <property name="test.classpath" refid="maven.test.classpath" />
-                <property name="plugin.classpath" refid="maven.plugin.classpath" />
+                <property name="compile.classpath" refid="maven.compile.classpath"/>
+                <property name="runtime.classpath" refid="maven.runtime.classpath"/>
+                <property name="test.classpath" refid="maven.test.classpath"/>
+                <property name="plugin.classpath" refid="maven.plugin.classpath"/>
                 <ant dir="src/build/resources" target="generate-if-necessary" />
               </target>
             </configuration>
@@ -213,7 +215,7 @@ POSSIBILITY OF SUCH DAMAGE.
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore></ignore>
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -232,7 +234,7 @@ POSSIBILITY OF SUCH DAMAGE.
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore></ignore>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
@@ -260,7 +262,6 @@ POSSIBILITY OF SUCH DAMAGE.
     <url>https://github.com/NASA-PDS/pds4-jparser/tree/master</url>
     <connection>scm:git:git://github.com/NASA-PDS/pds4-jparser.git</connection>
     <developerConnection>scm:git:ssh://git@github.com:NASA-PDS/pds4-jparser.git</developerConnection>
-    <tag>v2.1.0</tag>
   </scm>
 
   <repositories>
