--- a/pom.xml
+++ b/pom.xml
@@ -261,7 +261,7 @@ POSSIBILITY OF SUCH DAMAGE.
   <scm>
     <url>https://github.com/NASA-PDS/pds4-jparser/tree/master</url>
     <connection>scm:git:git://github.com/NASA-PDS/pds4-jparser.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com:NASA-PDS/pds4-jparser.git</developerConnection>
+    <developerConnection>scm:git:ssh://git@github.comr/NASA-PDS/pds4-jparser.git</developerConnection>
   </scm>
 
   <repositories>
