--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
   <groupId>gov.nasa.pds</groupId>
   <artifactId>pds4-jparser</artifactId>
-  <version>2.1.0</version>
+  <version>2.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -260,7 +260,7 @@ POSSIBILITY OF SUCH DAMAGE.
     <url>https://github.com/NASA-PDS/pds4-jparser/tree/master</url>
     <connection>scm:git:git://github.com/NASA-PDS/pds4-jparser.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/NASA-PDS/pds4-jparser.git</developerConnection>
-    <tag>v2.1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <repositories>
