--- a/.github/workflows/branch-cicd.yaml
+++ b/.github/workflows/branch-cicd.yaml
@@ -62,10 +62,7 @@ jobs:
                     java-version: ${{matrix.java-version}}
             -
                 name: 🩺 Test Software
-                run: mvn compile test site --file pom.xml
-                env:
-                    MAVEN_USERNAME: ${{secrets.OSSRH_USERNAME}}
-                    MAVEN_PASSWORD: ${{secrets.OSSRH_TOKEN}}
+                run: mvn test
 
 ...
 
