Add integration with validate to CI

--- a/.github/workflows/branch-cicd.yaml
+++ b/.github/workflows/branch-cicd.yaml
@@ -63,6 +63,14 @@ jobs:
             -
                 name: 🩺 Test Software
                 run: mvn test
+                
+            -
+                name: 🩺 Test Integration with Validate
+                run: |
+                    mvn install
+                    git clone https://github.com/NASA-PDS/validate.git
+                    cd validate
+                    mvn test
 
 ...
 
