--- a/.github/workflows/stable-cicd.yaml
+++ b/.github/workflows/stable-cicd.yaml
@@ -73,6 +73,10 @@ jobs:
                 with:
                     assembly: stable
                     packages: openjdk11-jdk
+                    maven-build-phases: install
+                    maven-doc-phases: clean,site,site:stage
+                    maven-stable-artifact-phases: clean,site,site:stage,deploy
+                    documentation-dir: target/staging/pds4-jparser
                 env:
                     ossrh_username: ${{secrets.OSSRH_USERNAME}}
                     ossrh_password: ${{secrets.OSSRH_PASSWORD}}
