Change jar to jar-no-fork

--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
             <id>make-source-jar</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>jar</goal>
+              <goal>jar-no-fork</goal>
             </goals>
             <configuration>
               <excludeResources>true</excludeResources>
