Switching to no-fork

--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,8 @@
             <id>make-source-jar</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>jar</goal>
-              <goal>test-jar</goal>
+              <goal>jar-no-fork</goal>
+              <goal>test-jar-no-fork</goal>
             </goals>
             <configuration>
               <excludeResources>true</excludeResources>
