--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,8 @@ repos:
             args:
               - '--baseline'
               - '.secrets.baseline'
+              - '--disable-plugin'
+              - 'AbsolutePathDetectorExperimental'
               - --exclude-files '\.secrets..*'
               - --exclude-files '\.git.*'
               - --exclude-files '\.pre-commit-config\.yaml'
