Upgrade apache commons lang dependency

--- a/pom.xml
+++ b/pom.xml
@@ -361,9 +361,9 @@
       <version>2.20.0</version>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.19.0</version>
     </dependency>
 
     <!-- NASA / PDS -->
